# yt-live-recorder

./: .gitignore  2025-01-31-youtube-live-recorder-prd.md  README.md  pyproject.toml
config/: example.yaml
src/: __init__.py  cli.py  config.py  logger.py  monitor.py  recorder.py  retry.py  utils.py  youtube_api.py
